--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravolt/avatar": "^4.1",
         "mcamara/laravel-localization": "^1.8",
         "realrashid/sweet-alert": "^6.0",
+        "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "^9.21"
     },
