--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-permission": "^5.5",
+        "staudenmeir/eloquent-has-many-deep": "^1.14",
         "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
